kubernetes/apps/monitoring/kube-prometheus-stack/app/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
spec:
  basicAuth:
    secret: basicauth
