kubernetes/apps/monitoring/kube-prometheus-stack/app/ingress.yaml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: grafana-ingress
#   annotations:
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`grafana.cloud.icylair.com`)
#       kind: Rule
#       services:
#         - name: grafana
#           port: 80
#           namespace: monitoring
#   tls:
#     secretName: cloud-icylair-com-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app grafana-ingress
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
  # annotations:  # Add this section for annotations
  #   traefik.ingress.kubernetes.io/router.middlewares: default-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: &host grafana.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
  - hosts:
      - grafana.cloud.icylair.com
    secretName: cloud-icylair-com-prod
